--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -298,3 +298,11 @@ border-radius: 10px;
   }
 }
 
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+
+}
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
