--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -11,7 +11,7 @@
   --neutral-light: #f4f4f4;
   --neutral-softer: #fdfafa;
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #b70501;
   --foreground: oklch(0.13 0.028 261.692);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.13 0.028 261.692);
